--- a/index.html
+++ b/index.html
@@ -678,7 +678,124 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
+   
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Januka Agriculture And Animal Farm",
+          "url": "https://janukaagricultureandanimalfarm.com.np/",
+          "logo": "https://janukaagricultureandanimalfarm.com.np/img/logo.png",
+          "image": "https://janukaagricultureandanimalfarm.com.np/img/about.jpg",
+          "description": "Januka Agriculture and Animal Farm produces organic vegetables, fruits, and livestock in Dhading, Nepal. We focus on sustainable farming, animal care, and farm-to-table living.",
+          "founder": {
+            "@type": "Person",
+            "name": "Januka Thapa",
+            "jobTitle": "Founder & CEO"
+          },
+          "foundingLocation": {
+            "@type": "Place",
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "Thakre-05, Dhading",
+              "addressCountry": "NP"
+            }
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+977-9749494817",
+            "contactType": "customer service",
+            "availableLanguage": ["English", "Nepali"]
+          },
+          "sameAs": [
+            "https://www.facebook.com/janukaagricultureandanimalfarm",
+            "https://www.instagram.com/janukaagricultureandanimalfarm"
+          ],
+          "department": [
+            {
+              "@type": "LocalBusiness",
+              "name": "Vegetables Department",
+              "description": "Fresh organic vegetables such as cabbage, coriander, onion, and ginger.",
+              "offers": [
+                {
+                  "@type": "Offer",
+                  "itemOffered": {
+                    "@type": "Product",
+                    "name": "Cabbage",
+                    "offers": {
+                      "@type": "Offer",
+                      "price": "50",
+                      "priceCurrency": "NPR"
+                    }
+                  }
+                }
+              ]
+            },
+            {
+              "@type": "LocalBusiness",
+              "name": "Fruits Department",
+              "description": "Organic fruits including orange, guava, mango, and jackfruit."
+            },
+            {
+              "@type": "LocalBusiness",
+              "name": "Animal Farming",
+              "description": "Healthy cattle, buffalo, goats, and poultry raised in a sustainable environment."
+            }
+          ],
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Farm Products",
+            "itemListElement": [
+              {
+                "@type": "Product",
+                "name": "Cabbage",
+                "offers": {
+                  "@type": "Offer",
+                  "price": "50",
+                  "priceCurrency": "NPR"
+                }
+              },
+              {
+                "@type": "Product",
+                "name": "Green Onion",
+                "offers": {
+                  "@type": "Offer",
+                  "price": "80",
+                  "priceCurrency": "NPR"
+                }
+              },
+              {
+                "@type": "Product",
+                "name": "Coriander",
+                "offers": {
+                  "@type": "Offer",
+                  "price": "100",
+                  "priceCurrency": "NPR"
+                }
+              },
+              {
+                "@type": "Product",
+                "name": "Ginger",
+                "offers": {
+                  "@type": "Offer",
+                  "price": "150",
+                  "priceCurrency": "NPR"
+                }
+              },
+              {
+                "@type": "Product",
+                "name": "Orange",
+                "offers": {
+                  "@type": "Offer",
+                  "price": "120",
+                  "priceCurrency": "NPR"
+                }
+              }
+            ]
+          }
+        }
+        </script>
+        
     <script src="js/main.js"></script>
 </body>
 
